[package]
name = "get-port"
version = "1.3.1"
authors = ["Carlos Menezes <carlos-menezes212@hotmail.com>"]
description = "Get an available port"
license = "MIT"
edition = "2018"
repository = "https://github.com/carlos-menezes/get_port"
keywords = ["port", "network"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
